Fix horizontal scroll appearing.

--- a/src/pages/accessibilityStatement/AccessibilityStatement.module.css
+++ b/src/pages/accessibilityStatement/AccessibilityStatement.module.css
@@ -12,7 +12,7 @@
 }
 
 .innerWrapper {
-    width: 800px;
+    width: auto;
     margin-left: 10px;
     margin-bottom: 50px;
 }
@@ -21,14 +21,32 @@
     margin: 16px 0;
 }
 
+.innerWrapper h1 {
+    font-size: var(--hds-text-xxl);
+}
+
 .innerWrapper h2 {
     margin-top: 25px;
-    font-size: var(--hds-text-xl);
+    font-size: var(--hds-text-lg);
 }
 
 @media (min-width: 1200px) {
     .container {
         margin: 20px auto 0;
         width: 1200px;
+    }
+}
+
+@media (min-width: 800px) {
+    .innerWrapper {
+        width: 800px;
+    }
+
+    .innerWrapper h1 {
+        font-size: var(--hds-text-xxl);
+    }
+
+    .innerWrapper h2 {
+        font-size: var(--hds-text-xl);
     }
 }
